@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST nwdiag-0.4.0.tar.gz 23923 RMD160 8962b13bbcfd1a664c391f5f82dc736546061b0e SHA1 ed16ad2286113f9a25534b048088e82a21e2b6db SHA256 06803c87cd82faab3e3edd7f369faad4921c789f92875e544f7b3e8b247d6ae6
 DIST nwdiag-0.5.1.tar.gz 26476 RMD160 4488c752fabd10d82ffb92c1ba7d917544ec9e13 SHA1 2215feff4b6192993ab45922731b617f7e11f1d8 SHA256 6dd01145b7269cca32f95271e6d729efd98d6a65b981f79356b92613789f1dcb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7Ap24ACgkQzJrj3cAXR0kKegCfbVg0tBsrCwgk5z8KG9SxiWRn
-bHcAmgO40jeU4aI70pC0qned5SCiBbzR
-=myx1
+iEYEAREKAAYFAk7KGIwACgkQzJrj3cAXR0mdAgCfb00IPJdkddldQUYQ2jIsfH56
+b3gAn1zyQ2dHw4/XL53UFD9ULrdBGzPw
+=nofQ
 -----END PGP SIGNATURE-----
