@@ -15,7 +15,7 @@ DESCRIPTION="Generate network-diagram images from spec-text file"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="examples minimal"
 
 DEPEND="dev-python/setuptools"
