@@ -1,4 +1,3 @@
-REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/nwdiag-0.5.1 %a
 REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/seqdiag-0.5.0 %a
 REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/virtualenvwrapper-2.10.1 %a
 REM 2011-11-21 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/actdiag-0.2.0 %a
