@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Nov 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.4.0.ebuild,
+  nwdiag-0.5.1.ebuild:
+  Keyworded x86.
+
   21 Nov 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.5.1.ebuild:
   Keyworded amd64.
 
